--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "expresss": "^0.0.0"
+    "expresss": "^0.0.0",
+    "sqlite3": "^5.1.7"
   }
 }
