--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "expresss": "^0.0.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "5.0.2"
   }
 }
